src/objects/Monthly_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Gross_Profit_USD__c</fullName>
        <formula>IF(AND(!ISBLANK(Average_Monthly_Currency_History__c),Exchange_Rate__c != 0), Actual_Gross_Profit__c / Exchange_Rate__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Profit USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit__c</fullName>
        <label>Actual Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_Rep__c</fullName>
        <formula>IF(Project__r.Project__r.No_of_sales_reps__c!=0,
   Actual_Revenue__c / Project__r.Project__r.No_of_sales_reps__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Revenue/Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Currency_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Average Monthly Currency History</label>
        <referenceTo>Average_Monthly_Currency_History__c</referenceTo>
        <relationshipLabel>Monthly Distributions</relationshipLabel>
        <relationshipName>Monthly_Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Account_formula__c</fullName>
        <formula>Project__r.Project__r.BrandAccount__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand/Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Account_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand/Account</label>
        <referenceTo>Brand_Account__c</referenceTo>
        <relationshipName>Monthly_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_formula__c</fullName>
        <formula>Project__r.Project__r.Brand__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Monthly_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Spend_Rep__c</fullName>
        <formula>IF(Project__r.Project__r.No_of_sales_reps__c != 0,
Client_Spend__c / Project__r.Project__r.No_of_sales_reps__c,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Spend/Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Spend_USD__c</fullName>
        <formula>IF(AND(!ISBLANK(Average_Monthly_Currency_History__c),Exchange_Rate__c != 0), Client_Spend__c / Exchange_Rate__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Spend USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Spend__c</fullName>
        <label>Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractID__c</fullName>
        <formula>Project__r.Payment__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>Project__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <formula>IF(!ISBLANK(Average_Monthly_Currency_History__c),
CASE(CurrencyIsoCode,
&apos;AUD&apos;, Average_Monthly_Currency_History__r.AUD__c,
&apos;CAD&apos;, Average_Monthly_Currency_History__r.CAD__c,
&apos;EUR&apos;, Average_Monthly_Currency_History__r.EUR__c,
&apos;GBP&apos;, Average_Monthly_Currency_History__r.GBP__c,
&apos;HKD&apos;, Average_Monthly_Currency_History__r.HKD__c,
&apos;IDR&apos;, Average_Monthly_Currency_History__r.IDR__c,
&apos;INR&apos;, Average_Monthly_Currency_History__r.INR__c,
&apos;JPY&apos;, Average_Monthly_Currency_History__r.JPY__c,
&apos;KRW&apos;, Average_Monthly_Currency_History__r.KRW__c,
&apos;MXN&apos;, Average_Monthly_Currency_History__r.MXN__c,
&apos;NZD&apos;, Average_Monthly_Currency_History__r.NZD__c,
&apos;PHP&apos;, Average_Monthly_Currency_History__r.PHP__c,
&apos;PLN&apos;, Average_Monthly_Currency_History__r.PLN__c,
&apos;RUB&apos;, Average_Monthly_Currency_History__r.RUB__c,
&apos;SGD&apos;, Average_Monthly_Currency_History__r.SGD__c,
&apos;THB&apos;, Average_Monthly_Currency_History__r.THB__c,
1),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Profit__c</fullName>
        <label>Expected Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Rep__c</fullName>
        <formula>IF(Project__r.Project__r.No_of_sales_reps__c!=0, 
   Actual_Gross_Profit__c / Project__r.Project__r.No_of_sales_reps__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit/Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>IF(Client_Spend__c != 0 , 
   Actual_Gross_Profit__c / Client_Spend__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Media_Order__c</fullName>
        <label>Media Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <formula>CASE(MONTH(Start_Date__c),1,&apos;January&apos;,
2,&apos;February&apos;,
3,&apos;March&apos;,
4,&apos;April&apos;,
5,&apos;May&apos;,
6,&apos;June&apos;,
7,&apos;July&apos;,
8,&apos;August&apos;,
9,&apos;September&apos;,
10,&apos;October&apos;,
11,&apos;November&apos;,
12,&apos;December&apos;,
&apos;Unknown&apos;)
&amp;&apos; &apos;&amp;
TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over1YearAgo__c</fullName>
        <formula>Start_Date__c &lt; TODAY() - 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over 1 Year Ago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.StrikeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Project</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Monthly Distributions</relationshipLabel>
        <relationshipName>Monthly_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Date__c</fullName>
        <formula>TEXT(
IF(
   Project__r.Project__r.Opportunity__r.CloseDate &lt;= 
   DATE(YEAR(TODAY())-1, 
        MONTH(TODAY()), 
        IF(MONTH(TODAY()) = 2 &amp;&amp; DAY(TODAY()) = 29, DAY(TODAY())-1, DAY(TODAY()))
        ) &amp;&amp; 
   YEAR( Start_Date__c ) = YEAR(TODAY())-1,
  YEAR(TODAY())-1,
YEAR(TODAY()))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(ISBLANK(Project__c ), &quot;SaaS&quot;, &quot;Managed Services&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Monthly Distribution</label>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>MD Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>